FILE(GLOB ALPHA_CLIPPING_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
FILE(GLOB HEADER_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.h)

ADD_EXECUTABLE(AlphaClipping ${ALPHA_CLIPPING_FILES} ${HEADER_FILES})
TARGET_LINK_LIBRARIES(AlphaClipping glCommon gl-sample-common-asset-importer)
ADD_DEPENDENCIES(AlphaClipping glCommon gl-sample-common-asset-importer)

TARGET_INCLUDE_DIRECTORIES(AlphaClipping PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})

INSTALL(TARGETS AlphaClipping DESTINATION bin)