FILE(GLOB AMBIENT_OCCLUSION_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
FILE(GLOB HEADER_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.h)

ADD_EXECUTABLE(AmbientOcclusion ${AMBIENT_OCCLUSION_FILES} ${HEADER_FILES})
TARGET_LINK_LIBRARIES(AmbientOcclusion glCommon gl-sample-common-asset-importer)
ADD_DEPENDENCIES(AmbientOcclusion glCommon gl-sample-common-asset-importer)

TARGET_INCLUDE_DIRECTORIES(AmbientOcclusion PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})

INSTALL(TARGETS AmbientOcclusion DESTINATION bin)