FILE(GLOB ANTI_ALIASING_SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
FILE(GLOB HEADER_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.h)

# Multiple
ADD_EXECUTABLE(AntiAliasing ${ANTI_ALIASING_SOURCE_FILES} ${HEADER_FILES})
TARGET_LINK_LIBRARIES(AntiAliasing glCommon gl-sample-common-asset-importer)
ADD_DEPENDENCIES(AntiAliasing glCommon gl-sample-common-asset-importer)

TARGET_INCLUDE_DIRECTORIES(AntiAliasing PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})

INSTALL(TARGETS AntiAliasing DESTINATION bin)
