FILE(GLOB BASIC_NORMAL_MAP_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
FILE(GLOB HEADER_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.h)

ADD_EXECUTABLE(BasicNormalMap ${BASIC_NORMAL_MAP_FILES} ${HEADER_FILES})
TARGET_LINK_LIBRARIES(BasicNormalMap glCommon gl-sample-common-asset-importer)
ADD_DEPENDENCIES(BasicNormalMap glCommon gl-sample-common-asset-importer)

TARGET_INCLUDE_DIRECTORIES(BasicNormalMap PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})