FILE(GLOB SOURCE_BASIC_TESSELLATION_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
FILE(GLOB HEADER_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.h)

ADD_EXECUTABLE(BasicTessellation ${SOURCE_BASIC_TESSELLATION_FILES} ${HEADER_FILES} )
TARGET_LINK_LIBRARIES(BasicTessellation glCommon gl-sample-common-asset-importer)
ADD_DEPENDENCIES(BasicTessellation glCommon gl-sample-common-asset-importer)

TARGET_INCLUDE_DIRECTORIES(BasicTessellation PRIVATE ${CMAKE_CURRENT_SOURCE_DIR} )
