FILE(GLOB SOURCE_BILLBOARDING_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
FILE(GLOB HEADER_BILLBOARDING_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.h)

ADD_EXECUTABLE(BillBoarding ${SOURCE_BILLBOARDING_FILES} ${HEADER_BILLBOARDING_FILES})
TARGET_LINK_LIBRARIES(BillBoarding glCommon gl-sample-common-asset-importer)
ADD_DEPENDENCIES(BillBoarding glCommon gl-sample-common-asset-importer)

TARGET_INCLUDE_DIRECTORIES(BillBoarding PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})

INSTALL(TARGETS BillBoarding DESTINATION bin)