FILE(GLOB BLENDING_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
FILE(GLOB HEADER_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.h)

ADD_EXECUTABLE(Blending ${BLENDING_FILES} ${HEADER_FILES})
TARGET_LINK_LIBRARIES(Blending glCommon gl-sample-common-asset-importer)
ADD_DEPENDENCIES(Blending glCommon gl-sample-common-asset-importer)

TARGET_INCLUDE_DIRECTORIES(Blending PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})