FILE(GLOB BLOOM_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
FILE(GLOB HEADER_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.h)

ADD_EXECUTABLE(Bloom ${BLOOM_FILES} ${HEADER_FILES})
TARGET_LINK_LIBRARIES(Bloom glCommon gl-sample-common-asset-importer)
ADD_DEPENDENCIES(Bloom glCommon gl-sample-common-asset-importer)

TARGET_INCLUDE_DIRECTORIES(Bloom PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})

INSTALL(TARGETS Bloom DESTINATION bin)