FILE(GLOB BLUR_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
FILE(GLOB HEADER_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.h)

ADD_EXECUTABLE(Blur ${BLUR_FILES} ${HEADER_FILES})
TARGET_LINK_LIBRARIES(Blur glCommon gl-sample-common-asset-importer)
ADD_DEPENDENCIES(Blur glCommon gl-sample-common-asset-importer)

TARGET_INCLUDE_DIRECTORIES(Blur PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
