FILE(GLOB SOURCE_CASCADING_SHADOW_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
FILE(GLOB HEADER_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.h)

ADD_EXECUTABLE(CascadingShadow ${SOURCE_CASCADING_SHADOW_FILES} ${HEADER_FILES})
TARGET_LINK_LIBRARIES(CascadingShadow glCommon gl-sample-common-asset-importer)
ADD_DEPENDENCIES(CascadingShadow glCommon gl-sample-common-asset-importer)

TARGET_INCLUDE_DIRECTORIES(CascadingShadow PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})

INSTALL(TARGETS CascadingShadow DESTINATION bin)