FILE(GLOB CIRCLE_PACKING_SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
FILE(GLOB CIRCLE_PACKING_HEADER_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.h)

ADD_EXECUTABLE(CirclePacking ${CIRCLE_PACKING_SOURCE_FILES} ${CIRCLE_PACKING_HEADER_FILES} )
TARGET_LINK_LIBRARIES(CirclePacking glCommon gl-sample-common-asset-importer)
ADD_DEPENDENCIES(CirclePacking glCommon gl-sample-common-asset-importer)

TARGET_INCLUDE_DIRECTORIES(CirclePacking PRIVATE ${CMAKE_CURRENT_SOURCE_DIR} )

INSTALL(TARGETS CirclePacking DESTINATION bin)