FILE(GLOB CLOTH_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
FILE(GLOB HEADER_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.h)

ADD_EXECUTABLE(Cloth ${CLOTH_FILES} ${HEADER_FILES})
TARGET_LINK_LIBRARIES(Cloth glCommon gl-sample-common-asset-importer)
ADD_DEPENDENCIES(Cloth glCommon gl-sample-common-asset-importer)

TARGET_INCLUDE_DIRECTORIES(Cloth PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
