FILE(GLOB SOURCE_CLOTH_SIMULATION_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
FILE(GLOB HEADER_CLOTH_SIMULATION_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.h)

ADD_EXECUTABLE(Cloth ${SOURCE_CLOTH_SIMULATION_FILES} ${HEADER_CLOTH_SIMULATION_FILES})
TARGET_LINK_LIBRARIES(Cloth glCommon gl-sample-common-asset-importer)
ADD_DEPENDENCIES(Cloth glCommon gl-sample-common-asset-importer)

TARGET_INCLUDE_DIRECTORIES(Cloth PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})

INSTALL(TARGETS Cloth DESTINATION bin)