FILE(GLOB SOURCE_CLOUDS_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
FILE(GLOB HEADER_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.h)

ADD_EXECUTABLE(Clouds ${SOURCE_CLOUDS_FILES} ${HEADER_FILES})
TARGET_LINK_LIBRARIES(Clouds glCommon gl-sample-common-asset-importer)
ADD_DEPENDENCIES(Clouds glCommon gl-sample-common-asset-importer)

TARGET_INCLUDE_DIRECTORIES(Clouds PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})

INSTALL(TARGETS Clouds DESTINATION bin)