FILE(GLOB COMPUTE_GROUP_VISUAL_SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
FILE(GLOB COMPUTE_GROUP_VISUAL_HEADER_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.h)

ADD_EXECUTABLE(ComputeGroupVisual ${COMPUTE_GROUP_VISUAL_SOURCE_FILES} ${COMPUTE_GROUP_VISUAL_HEADER_FILES} )
TARGET_LINK_LIBRARIES(ComputeGroupVisual glCommon)
ADD_DEPENDENCIES(ComputeGroupVisual glCommon)

TARGET_INCLUDE_DIRECTORIES(ComputeGroupVisual PRIVATE ${CMAKE_CURRENT_SOURCE_DIR} )

INSTALL(TARGETS ComputeGroupVisual DESTINATION bin)