FILE(GLOB CONDITIONAL_DRAW_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
FILE(GLOB HEADER_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.h)

ADD_EXECUTABLE(ConditionalDraw ${CONDITIONAL_DRAW_FILES} ${HEADER_FILES})
TARGET_LINK_LIBRARIES(ConditionalDraw glCommon gl-sample-common-asset-importer)
ADD_DEPENDENCIES(ConditionalDraw glCommon gl-sample-common-asset-importer)

TARGET_INCLUDE_DIRECTORIES(ConditionalDraw PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})

INSTALL(TARGETS ConditionalDraw DESTINATION bin)