FILE(GLOB SOURCE_CONDITIONAL_DRAW_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
FILE(GLOB HEADER_CONDITIONAL_DRAW_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.h)

ADD_EXECUTABLE(ConditionalDraw ${SOURCE_CONDITIONAL_DRAW_FILES} ${HEADER_CONDITIONAL_DRAW_FILES})
TARGET_LINK_LIBRARIES(ConditionalDraw glCommon gl-sample-common-asset-importer)
ADD_DEPENDENCIES(ConditionalDraw glCommon gl-sample-common-asset-importer)

TARGET_INCLUDE_DIRECTORIES(ConditionalDraw PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})

INSTALL(TARGETS ConditionalDraw DESTINATION bin)