FILE(GLOB CONTACT_SHADOW_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
FILE(GLOB HEADER_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.h)

ADD_EXECUTABLE(ContactShadow ${CONTACT_SHADOW_FILES} ${HEADER_FILES})
TARGET_LINK_LIBRARIES(ContactShadow glCommon gl-sample-common-asset-importer)
ADD_DEPENDENCIES(ContactShadow glCommon gl-sample-common-asset-importer)

TARGET_INCLUDE_DIRECTORIES(ContactShadow PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
