FILE(GLOB SOURCE_CONTACT_SHADOW_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
FILE(GLOB HEADER_CONTACT_SHADOW_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.h)

ADD_EXECUTABLE(ContactShadow ${SOURCE_CONTACT_SHADOW_FILES} ${HEADER_CONTACT_SHADOW_FILES})
TARGET_LINK_LIBRARIES(ContactShadow glCommon gl-sample-common-asset-importer)
ADD_DEPENDENCIES(ContactShadow glCommon gl-sample-common-asset-importer)

TARGET_INCLUDE_DIRECTORIES(ContactShadow PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})

INSTALL(TARGETS ContactShadow DESTINATION bin)