FILE(GLOB DEFERRED_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
FILE(GLOB HEADER_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.h)

ADD_EXECUTABLE(Deferred ${DEFERRED_FILES} ${HEADER_FILES})
TARGET_LINK_LIBRARIES(Deferred glCommon gl-sample-common-asset-importer)
ADD_DEPENDENCIES(Deferred glCommon gl-sample-common-asset-importer)

TARGET_INCLUDE_DIRECTORIES(Deferred PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})

INSTALL(TARGETS Deferred DESTINATION bin)