FILE(GLOB DEPTH_OF_FILES_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
FILE(GLOB HEADER_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.h)

ADD_EXECUTABLE(DepthOfField ${DEPTH_OF_FILES_FILES} ${HEADER_FILES})
TARGET_LINK_LIBRARIES(DepthOfField glCommon gl-sample-common-asset-importer)
ADD_DEPENDENCIES(DepthOfField glCommon gl-sample-common-asset-importer)

TARGET_INCLUDE_DIRECTORIES(DepthOfField PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})

INSTALL(TARGETS DepthOfField DESTINATION bin)