FILE(GLOB SOURCE_FOG_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
FILE(GLOB HEADER_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.h)

ADD_EXECUTABLE(Fog ${SOURCE_FOG_FILES} ${HEADER_FILES} )
TARGET_LINK_LIBRARIES(Fog glCommon gl-sample-common-asset-importer)
ADD_DEPENDENCIES(Fog glCommon gl-sample-common-asset-importer)

TARGET_INCLUDE_DIRECTORIES(Fog PRIVATE ${CMAKE_CURRENT_SOURCE_DIR} )
