FILE(GLOB SOURCE_FONT_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
FILE(GLOB HEADER_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.h)

ADD_EXECUTABLE(Font ${SOURCE_FONT_FILES} ${HEADER_FILES})
TARGET_LINK_LIBRARIES(Font glCommon gl-sample-common-asset-importer fragcore-font)
ADD_DEPENDENCIES(Font glCommon gl-sample-common-asset-importer fragcore-font)

TARGET_INCLUDE_DIRECTORIES(Font PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
