FILE(GLOB SOURCE_CLOUDS_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
FILE(GLOB HEADER_CLOUDS_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.h)

ADD_EXECUTABLE(CullingFrustum ${SOURCE_CLOUDS_FILES} ${HEADER_CLOUDS_FILES})
TARGET_LINK_LIBRARIES(CullingFrustum glCommon gl-sample-common-asset-importer)
ADD_DEPENDENCIES(CullingFrustum glCommon gl-sample-common-asset-importer)

TARGET_INCLUDE_DIRECTORIES(CullingFrustum PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})

INSTALL(TARGETS CullingFrustum DESTINATION bin)